--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,70 +42,71 @@ endif()
 # hash_map/hash_set namespace name and
 # hash_map/hash_set class name
 # Break on first successful compile and record names
-foreach(NAMESPACE std::tr1 __gnu_cxx "" std stdext)
- foreach(LOCATION tr1/unordered_map ext/hash_map hash_map)
-  foreach(CLASSNAME unordered_map hash_map)
-   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CMake/hash_test.cc.in
-                  ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_test.cc
+set(NAMESPACE "")
+set(LOCATION_MAP "")
+set(CLASSNAME_MAP "")
+set(LOCATION_SET "")
+set(CLASSNAME_SET "")
+foreach(NAMESPACE_I std std::tr1 stdext __gnu_cxx "")
+ # Try hash_map
+ foreach(LOCATION_MAP_I hash_map tr1/unordered_map ext/hash_map)
+  foreach(CLASSNAME_MAP_I unordered_map hash_map)
+   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CMake/hash_map_test.cc.in
+                  ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_map_test.cc
                   @ONLY)
-   try_compile(SUCCEED
+   try_compile(SUCCEED_MAP
                ${CMAKE_CURRENT_BINARY_DIR}/CMake
-               ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_test.cc)
-   if (SUCCEED)
+               ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_map_test.cc)
+   if (SUCCEED_MAP)
+    set(CLASSNAME_MAP "${CLASSNAME_MAP_I}")
     break()
    endif()
-  endforeach(CLASSNAME)
-  if (SUCCEED)
+  endforeach(CLASSNAME_MAP_I)
+  if (SUCCEED_MAP)
+   set(LOCATION_MAP "${LOCATION_MAP_I}")
    break()
   endif()
- endforeach(LOCATION)
- if (SUCCEED)
-  break()
- endif()
-endforeach(NAMESPACE)
+ endforeach(LOCATION_MAP_I)
 
-if (SUCCEED)
- # Namespace of hash_map/hash_set
- set(HASH_NAMESPACE ${NAMESPACE})
- # Define if the compiler has hash_map
- set(HAVE_HASH_MAP 1)
- # Location of <hash_map> file
- set(HASH_MAP_H ${LOCATION})
- # Class name of the <hash_map>
- set(HASH_MAP_CLASS ${CLASSNAME})
-endif ()
-
-# Repeat the same thing for hash_set
-foreach(NAMESPACE std::tr1 __gnu_cxx "" std stdext)
- foreach(LOCATION tr1/unordered_set ext/hash_set hash_set)
-  foreach(CLASSNAME unordered_set hash_set)
-   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CMake/hash_test.cc.in
-                  ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_test.cc
+ # Try hash_set
+ foreach(LOCATION_SET_I hash_set tr1/unordered_set ext/hash_set)
+  foreach(CLASSNAME_SET_I unordered_set hash_set)
+   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CMake/hash_set_test.cc.in
+                  ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_set_test.cc
                   @ONLY)
-   try_compile(SUCCEED
+   try_compile(SUCCEED_SET
                ${CMAKE_CURRENT_BINARY_DIR}/CMake
-               ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_test.cc)
-   if (SUCCEED)
+               ${CMAKE_CURRENT_BINARY_DIR}/CMake/hash_set_test.cc)
+   if (SUCCEED_SET)
+    set(CLASSNAME_SET "${CLASSNAME_SET_I}")
     break()
    endif()
-  endforeach(CLASSNAME)
-  if (SUCCEED)
+  endforeach(CLASSNAME_SET_I)
+  if (SUCCEED_SET)
+   set(LOCATION_SET "${LOCATION_SET_I}")
    break()
   endif()
- endforeach(LOCATION)
- if (SUCCEED)
-  break()
- endif()
-endforeach(NAMESPACE)
+ endforeach(LOCATION_SET_I)
 
-if (SUCCEED)
- # Define if the compiler has hash_set
- set(HAVE_HASH_SET 1)
- # Location of <hash_set> file
- set(HASH_SET_H, ${LOCATION})
- # Class name of <hash_set>
- set(HASH_SET_CLASS ${CLASSNAME})
-endif ()
+ # See if we found a successful compile
+ if (SUCCEED_MAP AND SUCCEED_SET)
+  # Namespace of hash_map/hash_set
+  set(HASH_NAMESPACE "${NAMESPACE_I}")
+  # Define if the compiler has hash_map
+  set(HAVE_HASH_MAP 1)
+  # Location of <hash_map> file
+  set(HASH_MAP_H "${LOCATION_MAP}")
+  # Class name of the <hash_map>
+  set(HASH_MAP_CLASS "${CLASSNAME_MAP}")
+  # Define if the compiler has hash_set
+  set(HAVE_HASH_SET 1)
+  # Location of <hash_set> file
+  set(HASH_SET_H "${LOCATION_SET}")
+  # Class name of <hash_set>
+  set(HASH_SET_CLASS "${CLASSNAME_SET}")
+  break()
+ endif ()
+endforeach(NAMESPACE_I)
 
 # Enable classes using zlib compression
 find_package(ZLIB)
@@ -118,7 +119,7 @@ endif ()
 
 # Define to necessary symbol if this constant
 # uses a non-standard name on your system
-set(ATTR_NAME)
+set(ATTR_NAME "UNKNOWN")
 foreach(PTHREAD_TEST PTHREAD_CREATE_JOINABLE PTHREAD_CREATE_UNDETACHED)
  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CMake/pthread_test.cc.in
                 ${CMAKE_CURRENT_BINARY_DIR}/CMake/pthread_test.cc
@@ -126,15 +127,14 @@ foreach(PTHREAD_TEST PTHREAD_CREATE_JOINABLE PTHREAD_CREATE_UNDETACHED)
  try_compile(SUCCEED
              ${CMAKE_CURRENT_BINARY_DIR}/CMake
              ${CMAKE_CURRENT_BINARY_DIR}/CMake/pthread_test.cc)
-
  if (SUCCEED)
-  set(ATTR_NAME ${PTHREAD_TEST})
+  set(ATTR_NAME "${PTHREAD_TEST}")
   break()
  endif ()
 endforeach(PTHREAD_TEST)
 
 if ("${ATTR_NAME}" STREQUAL "${PTHREAD_CREATE_JOINABLE}")
- set(PTHREAD_CREATE_JOINABLE ${ATTR_NAME})
+ set(PTHREAD_CREATE_JOINABLE "${ATTR_NAME}")
 endif ()
 
 # Define to 1 if you have the ANSI C header files
@@ -277,4 +277,4 @@ set_target_properties(protoc_compiler PROPERTIES
                       CMAKE_CXX_FLAGS -pthread
                       OUTPUT_NAME protoc)
 link_directories(${LIBRARY_OUTPUT_PATH})
-target_link_libraries(protoc_compiler pthread protoc)
+target_link_libraries(protoc_compiler pthread protoc z)
