--- a/src/CMake/hash_map_test.cc.in
+++ b/src/CMake/hash_map_test.cc.in
@@ -1,7 +1,7 @@
-#include <@LOCATION@>
+#include <@LOCATION_MAP_I@>
 int main ()
 {
- @NAMESPACE@::@CLASSNAME@<int, int> const m;
+ @NAMESPACE_I@::@CLASSNAME_MAP_I@<int, int> const m;
  m.find(1);
  return 0;
 }
